--- a/source/css/_custom.scss
+++ b/source/css/_custom.scss
@@ -696,3 +696,22 @@ ul.participants.list {
 #ai1ec-event-modal .clearfix {
   width: 100%;
 }
+
+// Eloqua form styles override
+#join {
+	#GatedFormContainer {
+		.form-header {
+			h4 {
+				padding-bottom: 0;  // reduce the gap between title and sub-title
+			}
+			.form-message {
+				padding-bottom: 20px;
+				padding-left: 0;  // align left with the rest of the text
+			}
+		}
+	}
+
+	#Loading {
+		padding-top: 50px;
+	}
+}
