--- a/source/forms/_join_commons.erb
+++ b/source/forms/_join_commons.erb
@@ -1,26 +1,5 @@
 
-
-<script type="text/javascript">
-  var GatedFormConfig = {
-   "hideStandardFields": [
-          "Work Phone",
-          "Department",
-          "Job Role",
-          "Country"
-      ],
-      "offer_id": "7016000000129tHAAQ",
-      "language": "en",
-      "FormTitle": "Join Now",
-      "FormIntro": "Fill out this form to opt into the Openshift Commons monthly newsletter.",
-      "NameOrder": "western",
-      "FormCallToAction": "Submit",
-      "ThanksTitle": "Thank you!",
-      "ThanksText": "Thank you for your interest in Openshift Commons. Your information has been submitted successfully.",
-      "ShowThanksButton": false,
-      "leadActivity": "0",
-      "disableVisitorContactLookups": false
-  };
-</script>
-
-<!-- render form here -->
-<div id="GatedFormContainer"></div>
+<!-- Eloqua form ifram (allowed domain workaround) -->
+<div id="elq-iframe-signup-container">
+  <iframe src="https://engage.redhat.com/opensource-commons-newsletter"></iframe>
+</div>
