iframe styling adjustments

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -11,7 +11,7 @@ description:  Where users, partners, customers, and contributors come together t
 <% end %>
 <section class="content_info" id="join">
   <div class="info_title wow fadeInDown" id="try">
-    <i class="fa fa-users right"></i>
+    <i class="fa fa-users left"></i>
     <div class="vertical_line">
       <div class="circle_bottom"></div>
     </div>
