--- a/source/css/_custom.scss
+++ b/source/css/_custom.scss
@@ -701,5 +701,7 @@ ul.participants.list {
 #elq-iframe-signup-container {
   iframe {
 	  width: 100%;
+		height: 570px; // fixed to current form
+		border: none;
   }
 }
