--- a/source/forms/_join_commons.erb
+++ b/source/forms/_join_commons.erb
@@ -1,5 +1,5 @@
 
 <!-- Eloqua form ifram (allowed domain workaround) -->
 <div id="elq-iframe-signup-container">
-  <iframe src="https://engage.redhat.com/opensource-commons-newsletter"></iframe>
+  <iframe src="https://engage.redhat.com/opensource-commons-newsletter" scrolling="no"></iframe>
 </div>
