sig: replace Operations with AIOps
* Renams the Operations SIG page and updates all references to AIOps
* The blog section displays only AI and AIOps tagged blog posts
* Removes the obsolete briefing video, as well as links to archived
  repos with Zabbix and Puppet scripts
* closes #1109

Requested-by: Diane Mueller-Klingspor
Signed-off-by: Jiri Fiala <jfiala@redhat.com>

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -199,13 +199,13 @@ description:  Where users, partners, customers, and contributors come together t
             <div class="paddings">
               <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 wow fadeInLeft">
                 <h2>
-                  <a href="/sig/Operations.html" title="Operations">OpenShift Ops</a>
-                  <p>Discuss, develop and disseminate best practices for administrating, managing and operating OpenShift</p>
+                  <a href="/sig/AIOps.html" title="Operations">AIOps</a>
+                  <p>Discuss, develop and disseminate best practices for AI driven OpenShift environment maintenance</p>
                 </h2>
               </div>
               <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 wow fadeInRight">
                 <h2>
-                  <a href="/sig/OpenshiftMachineLearning.html" title="OpenShift v3">Machine Learning on OpenShift</a>
+                  <a href="/sig/OpenshiftMachineLearning.html" title="OpenShift v3">Machine Learning</a>
                   <p>Discuss, develop and disseminate best practices for deploying and Machine Learning applications and workloads on OpenShift</p>
                 </h2>
               </div>
