--- a/source/sig/OpenShiftEnergy.html.erb
+++ b/source/sig/OpenShiftEnergy.html.erb
@@ -56,6 +56,27 @@ description: The principal purpose of the Energy Special Interest Group is to di
     </div>
   </div>
 </section>
+<section class="content_info">
+  <div class="info_resalt borders">
+    <div class="container">
+      <div class="row padding-top">
+        <div class="col-md-6">
+          <h3>Democratizing Data Science with Kubernetes</h3>
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe allowfullscreen="" class="embed-responsive-item" frameborder="0" src="https://www.youtube.com/embed/T1NEAC7z0JU"></iframe>
+          </div>
+          <p>Slides used by John Archer & Audrey Reznik in this talk can be found <a href="https://www.slideshare.net/jrarcher/democratizing-data-science-on-kubernetes" target="_blank">here</a>.</p>
+        </div>
+        <div class="col-md-6">
+          <h3>OpenShift Container Platform at BP</h3>
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe allowfullscreen="" class="embed-responsive-item" frameborder="0" src="https://www.youtube.com/embed/ZO3Z-B3MbkM"></iframe>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 <hr style="margin:0;">
 <section class="content_info" id="colleagues">
   <div class="vertical_line">
@@ -69,8 +90,30 @@ description: The principal purpose of the Energy Special Interest Group is to di
       </h1>
     </div>
   </div>
+
   <div class="container wow fadeInUp">
     <div class="row-fluid">
+      <div id="blog-promoted">
+        <div class="col-xs-12 col-md-6">
+          <div class="blog-article" style="height: 162px;">
+            <div class="blog-item">
+              <i class="fa fa-newspaper-o"></i>
+              <h3><a href="https://medium.com/@archerj/build-your-own-well-log-applications-on-containers-3c940b3b2214">Build your own Well log applications on containers</a></h3>
+              <div class="blog-article-description"><p></p><p>As with so many folks in the Gulf Coast, I’ve spent some time in the tech trenches of the Oil and Gas Industry. I’ve used Recall and Techlog …</p></div>
+            </div>
+          </div>
+        </div>
+        <div class="col-xs-12 col-md-6">
+          <div class="blog-article" style="height: 162px;">
+            <div class="blog-item">
+              <i class="fa fa-newspaper-o"></i>
+              <h3><a href="https://medium.com/@archerj/build-your-own-seismic-applications-while-you-are-at-it-on-containers-too-3a9891f5cc05">Build your own seismic applications</a></h3>
+              <div class="blog-article-description"><p></p><p>Continuing the blog post on <a href="https://medium.com/@archerj/build-your-own-well-log-applications-on-containers-3c940b3b2214/">building your own Well log application</a>, I believe it would be interesting to also see…</p></div>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <%= partial "sig/ecosystem_articles" %>
     </div>
   </div>
