--- a/source/css/style.css
+++ b/source/css/style.css
@@ -64,6 +64,8 @@
 /* bootstrap.css  - include resetes ( Media querys, grid-responsive,layout).*/
 @import url("bootstrap/bootstrap.css");
 @import url("bootstrap/bootstrap-theme.css");
+/* bootstrap toggle plugin */
+@import url("bootstrap-toggle/bootstrap-toggle.css");
 /*Style Switcher - Theme Options */
 @import url("skins/theme-options.css");
 /*jquery.fancybox-1.3.1.css  - Lightbox*/
