--- a/source/gatherings/template.html.erb
+++ b/source/gatherings/template.html.erb
@@ -285,13 +285,34 @@ description:  The OpenShift Commons community gets together and share experience
                   <a href="https://www.youtube.com/user/rhopenshift/playlists?search_query=gathering"><strong><%= gathering.videos_text.presence ? gathering.videos_text : 'See session video recordings from previous gatherings' %> »</strong></a>
                 </p>
                 <br>
+                <!-- Schedule track selector -->
+                <% tracks = []
+                   gathering.schedule.each do |s|
+                     if s.track.presence
+                       tracks.append(s.track)
+                     end
+                   end
+                   tracks.uniq!
+                %>
+                <% if tracks.length > 0 %>
+                  <div class="track-selector text-center">Click to show and hide tracks:<br />
+                    <% tracks.each do |track| %>
+                      <label class="track"  value="<%= track %>"><input type="checkbox" name="track" autocomplete="off" checked data-toggle="toggle" data-on="<%= track %>" data-off="<i class='fa fa-eye-slash'></i> <%= track %>" data-onstyle="track-color-<%= tracks.index(track) + 1 %>" data-offstyle="track-inactive"></label>
+                    <% end %>
+                    </div>
+                  </div>
+                <% end %>
                 <!-- Schedule Box -->
                 <div class="col-xs-12 event-box">
-                  <!-- Item -->
-                  <% gathering.schedule.each_with_index do |session, index| %>
-                  <div class="row schedule-list">
+                  <!-- Items -->
+                  <% gathering.schedule.sort_by{|s| s.local_time.to_time}.each_with_index do |session, index| %>
+                  <div class="row schedule-list <% if session.track.presence %><%= "track-" + session.track %><% end %>">
                     <div class="col-xs-5 col-sm-2 text-center"><%= session.local_time %></div>
-                    <div class="col-xs-7 col-sm-10 schedule-list-border-left"><%= session.session_name %>
+                    <div class="col-xs-7 col-sm-10 schedule-list-border-left">
+                    <% if session.track.presence %>
+                      <div class="schedule session-track track-color-<%= tracks.index(session.track) + 1 %>"><%= session.track %></div>
+                    <% end %>
+                      <%= session.session_name %>
                       <% if session.speakers.presence %>
                         <div class="schedule-speakers"><p>
                         <% session.speakers.each_with_index do |speaker, i| %>
@@ -304,12 +325,64 @@ description:  The OpenShift Commons community gets together and share experience
                         </p></div>
                       <% end %>
                     </div>
-                  </div>
-                  <%= "<hr>" unless index == gathering.schedule.size - 1 %>
+                  </div>                  
                   <% end %>
                   <!-- /.item-->
-              </div><!-- /.schedule box <-->
+              </div><!-- /.schedule box -->
           </div><!-- /.container -->
+
+          <!-- workshops -->
+          <% if gathering.workshops.presence && gathering.workshops.length > 0 %>
+          <div class="row">
+            <div class="container" id="workshops">
+              <div class="row">
+                <div class="col-xs-12">
+                  <h3 class="text-center"><i class="fa fa-cogs"></i> Workshops</h3><br>
+                </div>
+              </div>
+              <div class="workshops-container accordion" id="workshops-accordion">
+                <% gathering.workshops.sort_by{ |w| w.start_time.to_time }.each do |workshop| %>
+                <div class="card">
+                  <div class="card-header" id="workshop-heading-<%= workshop.title.gsub(/\s+/, "") %>">
+                    <div class="workshop-title collapsed" role="button" data-toggle="collapse" data-target="#collapse-<%= workshop.title.gsub(/\s+/, "") %>" aria-expanded="false" aria-controls="collapse-<%= workshop.title.gsub(/\s+/, "") %>">
+                      <i class="ec-icon fa fa-expand"></i>
+                      <%= workshop.title %>
+                    </div>
+                  </div>
+                  <div id="collapse-<%= workshop.title.gsub(/\s+/, "") %>" class="collapse" data-parent="#workshops-accordion" aria-labeled-by="#workshop-heading-<%= workshop.title.gsub(/\s+/, "") %>">
+                    <div class="card-body">
+                      <div class="workshop-time">
+                        <i class="fa fa-clock-o"></i> <%= workshop.start_time %> - <%= workshop.end_time %>
+                      </div>
+                      <div class="workshop-room">
+                        <i class="fa fa-map-marker"></i> <i>Room:</i> <%= workshop.room %>
+                      </div>
+                      <% if workshop.speakers.presence && workshop.speakers.length > 0 %>
+                      <div class="workshop-speakers">
+                        <i class="fa fa-user"></i> <i>Speakers:</i>
+                        <% workshop.speakers.each_with_index do |speaker, i| %>
+                          <% spkr = data.speakers.speakers.find{ |spkr| speaker.id == spkr.id } %>
+                          <% if i > 0 %>, <% end %>
+                          <%= spkr.name %><% if spkr.company.presence && spkr.company.length > 0 %> (<%= spkr.company %>)<% end %>
+                        <% end %>
+                      </div>
+                      <% end %>
+                      <div class="workshop-description">
+                        <%= simple_format(workshop.description) %>
+                      </div>
+                      <% if workshop.registration_URL.presence && workshop.registration_URL.length > 0 %>
+                      <div class="workshop-signup text-right">
+                        <a class="btn btn-success" href="<%= workshop.registration_URL %>" target="_blank"><i class="fa fa-sign-in"></i> Sign me up</a>
+                      </div>
+                      <% end %>
+                    </div>
+                  </div>
+                </div>
+              <% end %>
+              </div><!-- /#workshops-acordion -->
+            </div><!-- /.container #workshops -->
+          </div><!-- /.row -->
+          <% end %>
           <br><br>
           <div class="btn-event event-border buy obsoletes">
             <a href="<%= gathering.registration_URL %>" target="_blank">
@@ -435,6 +508,19 @@ description:  The OpenShift Commons community gets together and share experience
       $(".obsoletes").find("a").removeAttr("href");
       $("#gathering-over-notice").show();
     }
+
+    // track selector
+    $('.track-selector label.track').click(function() {
+      var trackClass = "track-" + $(this).attr("value");
+      $(".schedule-list." + trackClass).toggle();
+    });
+
+    // workshops expand-collapse icon
+    function toggleECicon(e) {
+        $(e.target).prev('.card-header').find('.ec-icon').toggleClass('fa-compress fa-expand');
+    }
+    $('.workshops-container').on('hidden.bs.collapse', toggleECicon);
+    $('.workshops-container').on('shown.bs.collapse', toggleECicon);
 
   })
 </script>
