Example: dynamic page title in layout based on gathering name

--- a/source/gatherings/template.html.erb
+++ b/source/gatherings/template.html.erb
@@ -1,6 +1,5 @@
 ---
-title: OpenShift Commons Gathering
-description:  The OpenShift Commons community gets together and share experience in person.
+layout: gathering_layout
 ---
 
 <% content_for :header do %>
